fixed issues caught by findbugs on WebInterfaceBrowseServlet